Add comprehensive Citations documentation for OpenWebUI Pipelines
- Add complete citations guide at docs/features/plugin/citations/index.mdx
- Document all citation event structures and metadata properties
- Add cross-references from pipelines and events documentation
- Include best practices, troubleshooting, and examples
- Remove old citations.md file location

--- a/docs/features/pipelines/index.mdx
+++ b/docs/features/pipelines/index.mdx
@@ -35,6 +35,7 @@ Welcome to **Pipelines**, an [Open WebUI](https://github.com/open-webui) initiat
 
 - [**Function Calling Pipeline**](https://github.com/open-webui/pipelines/blob/main/examples/filters/function_calling_filter_pipeline.py): Easily handle function calls and enhance your applications with custom logic.
 - [**Custom RAG Pipeline**](https://github.com/open-webui/pipelines/blob/main/examples/pipelines/rag/llamaindex_pipeline.py): Implement sophisticated Retrieval-Augmented Generation pipelines tailored to your needs.
+- [**Citations Pipeline**](https://github.com/open-webui/pipelines/blob/main/examples/pipelines/citations_example.py): Add source references and metadata to your responses with [Citations](../plugin/citations).
 - [**Message Monitoring Using Langfuse**](https://github.com/open-webui/pipelines/blob/main/examples/filters/langfuse_filter_pipeline.py): Monitor and analyze message interactions in real-time using Langfuse.
 - [**Rate Limit Filter**](https://github.com/open-webui/pipelines/blob/main/examples/filters/rate_limit_filter_pipeline.py): Control the flow of requests to prevent exceeding rate limits.
 - [**Real-Time Translation Filter with LibreTranslate**](https://github.com/open-webui/pipelines/blob/main/examples/filters/libretranslate_filter_pipeline.py): Seamlessly integrate real-time translations into your LLM interactions.
