--- a/docs/license.mdx
+++ b/docs/license.mdx
@@ -36,7 +36,7 @@ Open WebUI’s license now:
   - **You may NOT alter, remove, or obscure any “Open WebUI” branding** (name, logo, UI marks, etc.) in any deployment or distribution, except in the circumstances below.
   - Branding must remain clearly visible, unless:
     1. **You have 50 or fewer users** in a 30-day period;
-    2. **You are a contributor**, and have gotten written permission from us for an internal deployment;
+    2. **You are a substantive contributor**, and have gotten written permission from us for an internal deployment;
     3. **You’ve secured an enterprise license** from us which explicitly allows branding changes.
 - **CLA required for new contributions** after v0.6.5 (v0.6.6+) under the updated license.
 
@@ -62,7 +62,7 @@ This is not legal advice—refer to the full [LICENSE](https://github.com/open-w
 
 **Absolutely.** You can change, extend, and customize the code or the user interface for your organization’s needs—but you’re required to keep “Open WebUI” branding visible *unless*:
 - Your deployment is for **50 or fewer users in any 30-day window**; or
-- You’re a recognized project contributor **and** have received written permission to adjust branding for an internal deployment; or
+- You’re a substantive project contributor **and** have received written permission to adjust branding for an internal deployment; or
 - You’ve secured an **enterprise license** with us that explicitly allows branding changes.
 
 If you remove or modify branding without meeting these criteria, that’s a material breach of the license.
