Update index.md: Python 3.12 hint

--- a/docs/getting-started/quick-start/index.mdx
+++ b/docs/getting-started/quick-start/index.mdx
@@ -35,7 +35,7 @@ import PythonUpdating from './tab-python/PythonUpdating.md';
 Choose your preferred installation method below:
 
 - **Docker:** **Officially supported and recommended for most users**
-- **Python:** Suitable for low-resource environments or those wanting a manual setup
+- **Python:** Suitable for low-resource environments or those wanting a manual (for >=3.12 see [#18349](https://github.com/open-webui/open-webui/issues/18349))
 - **Kubernetes:** Ideal for enterprise deployments that require scaling and orchestration
 
 <Tabs>
