Add description for env variable OAUTH_CLIENT_SECRET_FILE
Add docs for https://github.com/open-webui/open-webui/pull/18529

--- a/docs/getting-started/env-configuration.mdx
+++ b/docs/getting-started/env-configuration.mdx
@@ -3314,6 +3314,11 @@ See https://open.feishu.cn/document/sso/web-application-sso/login-overview
 - Description: Sets the client secret for OIDC.
 - Persistence: This environment variable is a `PersistentConfig` variable.
 
+#### `OAUTH_CLIENT_SECRET_FILE`
+- Type: `str`
+- Description: Reads the client secret for OIDC from file, alternative to OAUTH_CLIENT_SECRET.
+- Persistence: This environment variable is a `PersistentConfig` variable.
+
 #### `OPENID_PROVIDER_URL`
 
 - Type: `str`
