--- a/docs/features/auth/sso/index.mdx
+++ b/docs/features/auth/sso/index.mdx
@@ -116,6 +116,7 @@ The following environment variables are used:
 
 1. `OAUTH_CLIENT_ID` - OIDC client ID
 1. `OAUTH_CLIENT_SECRET` - OIDC client secret
+1. `OAUTH_CLIENT_SECRET_FILE` - OIDC client secret file, provide alternatively to OAUTH_CLIENT_SECRET to provide secret from file 
 1. `OPENID_PROVIDER_URL` - **Required.** OIDC well known URL, for example `https://accounts.google.com/.well-known/openid-configuration`
 1. `OAUTH_PROVIDER_NAME` - Name of the provider to show on the UI, defaults to SSO
 1. `OAUTH_SCOPES` - Scopes to request. Defaults to `openid email profile`
