--- a/docs/enterprise/index.mdx
+++ b/docs/enterprise/index.mdx
@@ -40,7 +40,7 @@ Take your AI strategy to the next level with our **premium enterprise solutions*
 
 We **carefully select** our partners to maintain the **highest standards** and provide **the best experience** to our community.
 
-If you are a **consulting agency**, **AI services provider**, or **reseller**, please **do not** contact our enterprise sales directly. You will **not** get a response from our sales team. Instead, **fill out our partnership interest form**:
+If you are a **consulting agency**, **AI services provider**, **solutions provider** or **reseller**, please **do not** contact our enterprise sales directly. You will **not** get a response from our sales team. Instead, **fill out our partnership interest form**:
 
 🔗 **[Apply Here](https://forms.gle/SemdgxjFXpHmdCby6)**
 
