feat: document https://github.com/open-webui/open-webui/pull/18572

--- a/docs/getting-started/env-configuration.mdx
+++ b/docs/getting-started/env-configuration.mdx
@@ -3426,6 +3426,12 @@ If `OAUTH_PICTURE_CLAIM` is set to `''` (empty string), then the OAuth picture c
 - Description: Sets the roles that are considered administrators.
 - Persistence: This environment variable is a `PersistentConfig` variable.
 
+#### `OAUTH_ROLES_SEPARATOR`
+
+- Type: `str`
+- Default: `,`
+- Description: Sets the separator used for splitting the `OAUTH_*_ROLES` variables.
+
 #### `OAUTH_ALLOWED_DOMAINS`
 
 - Type: `str`
