--- a/docs/getting-started/env-configuration.mdx
+++ b/docs/getting-started/env-configuration.mdx
@@ -737,7 +737,26 @@ The format for the JSON response is strictly:
 - Type: `str` (JSON array)
 - Default: `[]`
 - Description: Specifies a JSON array of tool server connection configurations. Each connection should define the necessary parameters to connect to external tool servers that implement the OpenAPI/MCPO protocol. The JSON must be properly formatted or it will fallback to an empty array.
-- Example: `'[{"name": "example-server", "url": "https://api.example.com", "api_key": "your-key"}]'`
+- Example: 
+```json
+[
+  {
+    "type": "openapi",
+    "url": "example-url",
+    "spec_type": "url",
+    "spec": "",
+    "path": "openapi.json",
+    "auth_type": "none",
+    "key": "",
+    "config": { "enable": true },
+    "info": {
+      "id": "",
+      "name": "example-server",
+      "description": "MCP server description."
+    }
+  }
+]
+```
 - Persistence: This environment variable is a `PersistentConfig` variable.
 
 ### Autocomplete
