docs: add warning about tool connections data structure possible evolution overtime

--- a/docs/getting-started/env-configuration.mdx
+++ b/docs/getting-started/env-configuration.mdx
@@ -759,6 +759,12 @@ The format for the JSON response is strictly:
 ```
 - Persistence: This environment variable is a `PersistentConfig` variable.
 
+:::warning
+
+The JSON data structure of `TOOL_SERVER_CONNECTIONS` might evolve over time as new features are added.
+
+:::
+
 ### Autocomplete
 
 #### `ENABLE_AUTOCOMPLETE_GENERATION`
