--- a/docs/getting-started/env-configuration.mdx
+++ b/docs/getting-started/env-configuration.mdx
@@ -1303,23 +1303,26 @@ If you want to use Milvus, be careful when upgrading Open WebUI (crate backups a
 
 :::
 
-#### `MILVUS_URI`
+#### `MILVUS_URI` **(Required)**
 
 - Type: `str`
 - Default: `${DATA_DIR}/vector_db/milvus.db`
+- Example (Remote): `http://your-server-ip:19530`
 - Description: Specifies the URI for connecting to the Milvus vector database. This can point to a local or remote Milvus server based on the deployment configuration.
 
-#### `MILVUS_DB`
+#### `MILVUS_DB` **(Required)**
 
 - Type: `str`
 - Default: `default`
+- Example: `default`
 - Description: Specifies the database to connect to within a Milvus instance.
 
-#### `MILVUS_TOKEN`
+#### `MILVUS_TOKEN` **(Required for remote connections with authentication)**
 
 - Type: `str`
 - Default: `None`
-- Description: Specifies an optional connection token for Milvus.
+- Example: `root:password` (format: `username:password`)
+- Description: Specifies an optional connection token for Milvus. Required when connecting to a remote Milvus server with authentication enabled. Format is `username:password`.
 
 #### `MILVUS_INDEX_TYPE`
 
