--- a/docs/getting-started/env-configuration.mdx
+++ b/docs/getting-started/env-configuration.mdx
@@ -1310,7 +1310,7 @@ If you want to use Milvus, be careful when upgrading Open WebUI (crate backups a
 - Example (Remote): `http://your-server-ip:19530`
 - Description: Specifies the URI for connecting to the Milvus vector database. This can point to a local or remote Milvus server based on the deployment configuration.
 
-#### `MILVUS_DB` **(Required)**
+#### `MILVUS_DB`
 
 - Type: `str`
 - Default: `default`
