--- a/docs/getting-started/env-configuration.mdx
+++ b/docs/getting-started/env-configuration.mdx
@@ -1125,7 +1125,7 @@ Read more about `offline mode` in the [offline mode guide](/docs/tutorials/offli
 
 :::warning
 
-**This variable is required to be set**, otherwise you may experience Websocket issues and weird "{}" responses or "Unexpected token 'd', "data: {"id"... is not valid JSON".
+**This variable is required to be set**, otherwise you may experience Websocket issues and weird "\{\}" responses or "Unexpected token 'd', "data: \{"id"... is not valid JSON".
 
 :::
 
