--- a/docs/enterprise/customers/samsung-semiconductor.mdx
+++ b/docs/enterprise/customers/samsung-semiconductor.mdx
@@ -7,13 +7,11 @@ keywords: ["Samsung Semiconductor AI", "Open WebUI case study", "on-prem AI plat
 
 # Samsung Semiconductor Accelerates R&D With Private, On-Prem AI Platform Powered by Open WebUI
 
-**Published**: November 2025
-
 ![Samsung Semiconductor, Inc.](/images/enterprise/customers/samsung-semiconductor/hero.png)
 
 ## Overview
 
-:::tip
+:::info
 How Samsung Semiconductor built a secure, self-hosted AI platform with **Open WebUI** to boost research and development efficiency, cutting workflows **from days to hours**.
 :::
 
@@ -31,7 +29,7 @@ How Samsung Semiconductor built a secure, self-hosted AI platform with **Open We
 
 ## About Samsung Semiconductor Inc.
 
-Samsung Semiconductor Inc. (SSI) delivers cutting-edge semiconductor solutions including DRAM, SSD, processors, and image sensors. With innovation at its core, the company supports global technology leaders and powers advancements across data centers, mobile devices, and AI systems.
+[Samsung Semiconductor Inc. (SSI)](https://semiconductor.samsung.com/) delivers cutting-edge semiconductor solutions including DRAM, SSD, processors, and image sensors. With innovation at its core, the company supports global technology leaders and powers advancements across data centers, mobile devices, and AI systems.
 
 ## The Challenge: Secure, Flexible AI at Scale`
 
@@ -109,7 +107,7 @@ Samsung Semiconductor plans to continue expanding its AI infrastructure with Ope
 
 ---
 
-:::info
+:::tip
 
 **Looking for an [Enterprise Plan](https://docs.openwebui.com/enterprise)?** — **[Speak with Our Sales Team Today!](https://docs.openwebui.com/enterprise)**
 
