--- a/docs/enterprise/customers/samsung-semiconductor.mdx
+++ b/docs/enterprise/customers/samsung-semiconductor.mdx
@@ -1,6 +1,6 @@
 ---
 sidebar_position: 1
-title: "Samsung Semiconductor"
+title: "Samsung Semiconductor Inc."
 description: "How Samsung Semiconductor built a secure, self-hosted AI platform with Open WebUI to boost research and development efficiency, cutting workflows from days to hours."
 keywords: ["Samsung Semiconductor AI", "Open WebUI case study", "on-prem AI platform", "enterprise LLM", "private AI deployment", "Kubernetes AI", "RAG internal data", "AI productivity", "secure generative AI", "LLM for R&D"]
 ---
