--- a/docs/enterprise/customers/samsung-semiconductor.mdx
+++ b/docs/enterprise/customers/samsung-semiconductor.mdx
@@ -31,7 +31,7 @@ How Samsung Semiconductor built a secure, self-hosted AI platform with **Open We
 
 [Samsung Semiconductor Inc. (SSI)](https://semiconductor.samsung.com/) delivers cutting-edge semiconductor solutions including DRAM, SSD, processors, and image sensors. With innovation at its core, the company supports global technology leaders and powers advancements across data centers, mobile devices, and AI systems.
 
-## The Challenge: Secure, Flexible AI at Scale`
+## The Challenge: Secure, Flexible AI at Scale
 
 As teams across SSI began experimenting with generative AI tools, leadership identified a need for a **self-hosted AI interface** that balanced **innovation with control**.
 
