--- a/docs/enterprise/index.mdx
+++ b/docs/enterprise/index.mdx
@@ -40,7 +40,7 @@ Explore how other organizations are driving real impact with Open WebUI.
 
 ## Let’s Talk
 
-📧 **sales@openwebui.com** — Send us your deployment **end user count (seats)**, and let’s explore how we can work together!
+**sales@openwebui.com** — Send us your deployment **end user count (seats)**, and let’s explore how we can work together!
 
 :::info
 
