--- a/docs/enterprise/index.mdx
+++ b/docs/enterprise/index.mdx
@@ -5,13 +5,11 @@ title: "🏢 Open WebUI for Enterprises"
 
 import { Testimonals } from "@site/src/components/Testimonals";
 
-
-
 ## The AI Platform Powering the World’s Leading Organizations
-
 
 In the rapidly advancing AI landscape, staying ahead isn't just a competitive advantage, it’s a necessity. Open WebUI is the **fastest-growing AI platform** designed for **seamless enterprise deployment**, helping organizations leverage cutting-edge AI capabilities with **unmatched efficiency**.
 
+![Open WebUI, Inc.](/images/enterprise/hero.png)
 
 :::tip
 
