--- a/docs/license.mdx
+++ b/docs/license.mdx
@@ -9,6 +9,17 @@ import { TopBanners } from "@site/src/components/TopBanners";
 
 ## Keeping Open WebUI Free, Fair, and Sustainable
 
+
+:::tip
+**Here's the TL;DR:**
+
+To keep Open WebUI thriving for the long term, we’ve introduced a **lightweight branding protection clause** that helps us sustain the project while ensuring **every user** continues to benefit from rapid innovation **without resorting to gated features or paywalled functionality**. As a small, independent team building mission-critical AI tooling, we rely on fair attribution to support ongoing development, security, and quality, all without restricting real users, contributors, or businesses who use Open WebUI responsibly.
+
+And for those who prefer a fully permissive path, **anyone can still fork from v0.6.5 with zero restrictions and build from there however they choose**. It’s a simple, balanced step that protects the ecosystem, strengthens the project, and **ensures we can sustain our mission of empowering everyone**.
+:::
+
+
+
 If you've been following Open WebUI’s journey, you know our mission has always been: empower everyone with cutting-edge AI, no strings attached. Open WebUI is an independent project, built and maintained by a small, dedicated core team. Over the last year, we’ve poured **countless hours, late nights, and real financial resources** into making this tool world-class—**and we trust our users enough to keep it free and open**.
 
 But with Open WebUI’s rapid growth and success, we started seeing a pattern we couldn’t ignore: **bad actors taking our work, stripping the branding, selling it as their own, and giving nothing back.** That’s not open source—that’s exploitation. When organizations profit off our efforts, misrepresent our work, and box out the real community, it threatens the very spirit of what we’re trying to build.
