--- a/docs/license.mdx
+++ b/docs/license.mdx
@@ -147,9 +147,7 @@ We remain as open, reasonable, and fair as ever—and we trust the community to 
 
 If in doubt, or if you have concerns about your past or future contributions, please reach out—we value every contributor and are committed to respecting your rights.
 
-:::note
-
-**Note:**
+:::info
 
 BSD-3 output/forks have **maximum flexibility**: as long as you keep the original BSD-3 notice, you can even apply your own license terms on top of your modifications or distribute them however you wish.
 
